@@ -91,9 +91,10 @@
  * 2005-11-17 47-pc0.7.1-1 - Report tool serial number and ID to Xinput
  * 2005-12-02 47-pc0.7.1-2 - Grap the USB port so /dev/input/mice won't get it
  * 2005-12-21 47-pc0.7.2 - new release
+ * 2006-03-21 47-pc0.7.3 - new release
  */
 
-static const char identification[] = "$Identification: 47-0.7.2 $";
+static const char identification[] = "$Identification: 47-0.7.3 $";
 
 /****************************************************************************/
 
